--- a/src/main/resources/templates/productsAdd.html
+++ b/src/main/resources/templates/productsAdd.html
@@ -71,9 +71,15 @@
                            placeholder="Weight">
                 </div>
                 <div class="form-group">
+                    <label for="country">Country</label>
+                    <input type="text" class="form-control" required th:field="*{country}" name="name" id="country"
+                           placeholder="country name">
+                </div>
+                <div class="form-group">
                     <label for="description">Product Description</label>
                     <textarea class="form-control" rows="5" th:field="*{description}" name="description" id="description"></textarea>
                 </div>
+
             </div>
             <div class="col-sm-5">
                 <p>Product Image</p>
